--- a/apache_install.yml
+++ b/apache_install.yml
@@ -4,11 +4,12 @@
   become: true
   tasks:
 
-    - name: sudo apt update
-      apt:
+    - name: update and install packages
+      package:
         update_cache: yes
-
-    - name: install apache2 package
-      apt:
-        name: apache2
+        name:
+          - "{{ apache_package }}"
+          - "{{ php_package }}"
         state: latest
+
+
